# tableclass

./: Cargo.toml  Grammar.txt  README.md
src/: explain.rs  logit.rs  mod.rs  table.rs
src/bins/binchrisdate/: chrisdate.rs  ex_distinct.rs  ex_explain.rs  ex_groupby.rs  ex_groupby_own_function.rs  ex_join.rs  ex_join_and_project.rs  ex_join_multi.rs  ex_join_test.rs  ex_limit.rs  ex_orderby.rs  ex_project.rs  ex_project_sub.rs  ex_query.rs  ex_scatter.rs  ex_set.rs  ex_where.rs  ex_where_eq_kind_depsubq.rs  ex_where_eq_kind_once.rs  ex_where_exist_kind_depsub.rs  ex_where_set_kind_once.rs  ex_with_recursive.rs  main.rs
src/bins/binchrisdate/databigger/: bygg.sh  job.csv  ledger.csv  part.csv  supplier.csv  supplierpart.csv  supplierpartjob.csv
src/bins/binchrisdate/datasmaller/: bygg.sh  part.csv  supplier.csv  supplierpart.csv
src/bins/bindemo/: main.rs
src/bins/binrecepie/: complexrecepies.rs  main.rs  popingredients.rs  recepies.rs
src/bins/binrecepie/data/: ingredient.csv  recepies.csv  recepiesstepingredient.csv  recepiestep.csv
src/bins/binrecepie/data/svgs/: bygg.sh
src/table_folder/: mod.rs  table_as_csv.rs  table_distinct.rs  table_from.rs  table_from_dummy.rs  table_groupby.rs  table_join copy.rs  table_join.rs  table_limit.rs  table_orderby.rs  table_scatter.rs  table_select.rs  table_select_sub.rs  table_set.rs  table_where.rs  table_with_recursive.rs
